# my_project

./: Makefile  VD_games.py  pyproject.toml
VD_games/: __init__.py
my_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
my_project_markov/VD_games/: VD_games.py
my_project_markov/VD_games/engine/: engine.py  game_engine.py
my_project_markov/VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
my_project_markov/VD_games/scripts/: VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py  brain_calc.py  brain_even.py
