[project]
name = "VD_games"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["prompt>=0.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_project_markov"]

[dependency-groups]
dev = ["ruff==0.14.5"]

[project.scripts]
VD-games = "my_project_markov.VD_games.scripts.VD_main:main"
brain-even = "my_project_markov.VD_games.scripts.brain_even:main"
brain-calc = "my_project_markov.VD_games.scripts.brain_calc:main"
VD-gcd = "my_project_markov.VD_games.scripts.VD_gcd:main"
VD-progression = "my_project_markov.VD_games.scripts.VD_progression:main"
VD-prime = "my_project_markov.VD_games.scripts.VD_prime:main"

